--- a/app/components/Select/Select.module.scss
+++ b/app/components/Select/Select.module.scss
@@ -24,9 +24,9 @@
   }
 
   .activeOption {
-    flex-grow: 1;
+    display: flex;
+    align-items: center;
     white-space: nowrap;
-    text-overflow: ellipsis;
   }
 }
 
